--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 CONNECTION_URL_ONLINE = mongodb+srv://hasnain:hasnain123@cluster0.xa0yd.mongodb.net/quotationdb?retryWrites=true&w=majority
 CONNECTION_URL_OFFLINE = mongodb://localhost:27017/quotationdb
+SECRET = asdfasdf1234567890$%^&*aasdf~!!@$%^%^&$&ASDFASFAASDFASDFAAASDFSDFaasdf///??{{]]aaasdfa{{FhasdfasfjjasdfasdfasdfFHJKL:PK
